force-app/main/default/objects/TriggerSwitch__c/TriggerSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TriggerSwitch</label>
</CustomObject>