force-app/main/default/objects/TriggerSwitch__c/fields/All__c.field-meta.xml
<CustomField>
    <fullName>All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>All</label>
    <type>Checkbox</type>
</CustomField>