force-app/main/default/objects/TriggerSwitch__c/fields/CollaboApproval__c.field-meta.xml
<CustomField>
    <fullName>CollaboApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>협업 사업기회의 Knox Approval 처리 여부(True인 경우 처리)</description>
    <label>CollaboApproval</label>
    <type>Checkbox</type>
</CustomField>