force-app/main/default/objects/TriggerSwitch__c/fields/FakeTest__c.field-meta.xml
<CustomField>
    <fullName>FakeTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FakeTest</label>
    <type>Checkbox</type>
</CustomField>