force-app/main/default/objects/TriggerSwitch__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>해당 필드가 체크되어있는 경우 마이그 로직을 실행하지않음</description>
    <label>Migration</label>
    <type>Checkbox</type>
</CustomField>