force-app/main/default/objects/TriggerSwitch__c/fields/OpportunityActivity__c.field-meta.xml
<CustomField>
    <fullName>OpportunityActivity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OpportunityActivity</label>
    <type>Checkbox</type>
</CustomField>