force-app/main/default/objects/TriggerSwitch__c/fields/OpportunityBizLvSetting__c.field-meta.xml
<CustomField>
    <fullName>OpportunityBizLvSetting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OpportunityBizLvSetting</label>
    <type>Checkbox</type>
</CustomField>