force-app/main/default/objects/TriggerSwitch__c/fields/OpportunityCodeSetting__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCodeSetting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OpportunityCodeSetting</label>
    <type>Checkbox</type>
</CustomField>