force-app/main/default/objects/TriggerSwitch__c/fields/OpportunityDeleteSetting__c.field-meta.xml
<CustomField>
    <fullName>OpportunityDeleteSetting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OpportunityDeleteSetting</label>
    <type>Checkbox</type>
</CustomField>