force-app/main/default/objects/TriggerSwitch__c/fields/OpportunityLogisticsValidation__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLogisticsValidation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>레코드 타입 Logistics 유효성 트리거</description>
    <label>OpportunityLogisticsValidation</label>
    <type>Checkbox</type>
</CustomField>