force-app/main/default/objects/TriggerSwitch__c/fields/OpportunitySendToSAP__c.field-meta.xml
<CustomField>
    <fullName>OpportunitySendToSAP__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Opportunity 작성/수정/삭제 시 SAP 정보 전송 여부</description>
    <inlineHelpText>Opportunity 작성/수정/삭제 시 SAP 정보 전송 여부</inlineHelpText>
    <label>OpportunitySendToSAP</label>
    <type>Checkbox</type>
</CustomField>