force-app/main/default/objects/TriggerSwitch__c/fields/RevenueScheduleOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RevenueScheduleOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RevenueScheduleOpportunity</label>
    <type>Checkbox</type>
</CustomField>