force-app/main/default/objects/TriggerSwitch__c/fields/WeeklyReportSend__c.field-meta.xml
<CustomField>
    <fullName>WeeklyReportSend__c</fullName>
    <defaultValue>true</defaultValue>
    <label>WeeklyReportSend</label>
    <type>Checkbox</type>
</CustomField>