force-app/main/default/objects/TriggerSwitch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>All__c</columns>
    <columns>Event__c</columns>
    <columns>Migration__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OpportunityActivity__c</columns>
    <columns>OpportunityBizLvSetting__c</columns>
    <columns>OpportunityCodeSetting__c</columns>
    <columns>OpportunityDeleteSetting__c</columns>
    <columns>OpportunityLogisticsValidation__c</columns>
    <columns>OpportunitySendToSAP__c</columns>
    <columns>RevenueScheduleOpportunity__c</columns>
    <columns>WeeklyReportSend__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>ko</language>
</ListView>